--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -1,38 +1,37 @@
 div {
-	font-family: "Arial"; /*"Stencil Regular"; */
-/* 	font-weight: bold; */
+	font-family: "Arial";
+	/*"Stencil Regular"; */
+	/* 	font-weight: bold; */
 	position: absolute;
 }
-
 
 .parameterEditArea {
 	background-color: #f6f6f6;
 	position: relative;
 }
 
-  .valuepair {
-	overflow:auto;
+.valuepair {
+	overflow: auto;
 	background-color: #f6f6f6;
 	position: relative;
 	font-family: Arial;
-  }
-  
-  .lname{
-	float:left; 
- 	background-color: #f6f6f6; 
+}
+
+.lname {
+	float: left;
+	background-color: #f6f6f6;
 	color: black;
-	margin:10px 10px 10px 10px;
+	margin: 10px 10px 10px 10px;
 	position: relative;
 	font-family: Arial;
-  }
-  .rvalue{
-	float:right; 
- 	background-color: #f6f6f6; 
+}
+
+.rvalue {
+	float: right;
+	background-color: #f6f6f6;
 	position: relative;
 	font-family: Arial;
-  }
-
-
+}
 
 #loadingScreen {
 	z-index: 3;
@@ -45,7 +44,6 @@ div {
 #simulateActivities {
 	top: 50px;
 	left: 1050px;
-	
 	position: relative;
 }
 
@@ -58,7 +56,7 @@ div {
 	top: 150px;
 }
 
-  .sectionheader {
+.sectionheader {
 	color: white;
 	border-radius: 4px 4px 0px 0px;
 	background-color: #505E6B;
@@ -69,15 +67,15 @@ div {
 	font-size: 30px;
 }
 
-  .sectionbase {
-	border-radius: 0px 0px 4px 4px ;
+.sectionbase {
+	border-radius: 0px 0px 4px 4px;
 	background-color: #f6f6f6;
 	padding: 10px 10px 10px 15px;
 	margin: 0px 10px 10px 10px;
 	position: relative;
 	font-family: Arial;
 }
-  
+
 .dot {
 	position: absolute;
 	left: 400px;
@@ -89,8 +87,7 @@ div {
 	border-radius: 50%;
 	background: #ccc;
 	z-index: -1;
-	box-shadow: 30px 0 0 #ccc, 60px 0 0 #ccc, 90px 0 0 #ccc, 120px 0 0 #ccc,
-		150px 0 0 #ccc;
+	box-shadow: 30px 0 0 #ccc, 60px 0 0 #ccc, 90px 0 0 #ccc, 120px 0 0 #ccc, 150px 0 0 #ccc;
 	-webkit-animation: r-to-l 0.4s infinite;
 	-moz-animation: r-to-l 0.4s infinite;
 	-o-animation: r-to-l 0.4s infinite;
@@ -108,39 +105,38 @@ div {
 	z-index: 999;
 }
 
-  .backgroundarea {
+
+.savebackground {
+	display: none;
+	z-index: 100;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: rgba(52, 63, 72, 0.9);
 }
 
-  .savebackground {
-    display:none;
-  	z-index: 100; 
-  	top: 0px; 
-  	left: 0px; 
-  	width: 100%; 
-  	height: 100%; 
-  	position: absolute;
-    background-color:rgba(52, 63, 72, 0.9);
+.container {
+	display: none;
+	z-index: 200;
+	position: absolute;
+	width: 400px;
+	top: 20%;
+	left: 50%;
 }
 
-   .container {
-    display:none;
-  	z-index: 200;
-    position: absolute;
-    width:400px;
-    top: 20%;
-    left: 50%;
-} 
- .containerelement{
- 	position:relative;
-    top: -50%;
-    left: -50%;
-} 
- 
+.containerelement {
+	position: relative;
+	top: -50%;
+	left: -50%;
+}
+
 #Guidecontainer {
 	border: solid black 1px;
 	width: 1000px;
 	height: 700px;
-} 
+}
 
 .center {
 	display: -webkit-box;
@@ -182,359 +178,115 @@ div {
 	right: 0%;
 }
 
-.engine {
-	width: 550px;
-	height: 443px;
-	top: 25px;
-	left: 25px;
-}
-
-/* #engine1 { */
-/* 	background-image: url("../Pictures/pretty_engine_resized.jpg"); */
-/* } */
-
-.ogbutton {
-	border-radius: 10px;
-	padding: 5px;
-	background-color: #505E6B;
-	font-family: Arial;
-	font-size: 30px;
-	color: white;
-}
-
 .textbox {
 	padding: 5px;
 	background-color: white;
 	color: black;
 	font-family: Arial;
-	font-size:16px;
+	font-size: 16px;
 }
 
-.circle {
-	border-radius: 50%;
-	border: solid grey 6px;
-	width: 23px;
-	height: 23px;
+/*
+@ -webkit-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-#circle1 {
-	bottom: 32px;
-	left: 128px;
+@ -moz-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-.cross {
-	color: black;
-	font-weight: normal;
-	font-size: 72px;
-	width: 60px;
-	height: 60px;
-	z-index: 2;
-	display: none;
+@ -o-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-/* #engine2 { */
-/* 	background-image: url("../Pictures/2nd_pretty_engine.jpg"); */
-/* 	visibility: hidden; */
-/* } */
-
-#finalImage {
-	background-image: url("../Pictures/tumme_upp.jpg");
-	visibility: hidden;
+@ keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-.contentFooters {
-	background-color: #323F48;
-	color: #FCDF07;
-	font-size: 30px;
-	border: solid #323F48 7px;
-	border-radius: 4px;
-	height: 40px;
-	bottom: 10px;
+@ -webkit-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-#lock {
-	color: #D0D1D3;
-	width: 40px;
-	left: 10px;
+@ -moz-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-#finalTorque {
-	width: 140px;
-	left: 70px;
+@ -o-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-#finalTorqueValue {
-	width: 100px;
+@ keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-#finalTorqueNm {
-	font-size: 15px;
-	width: 40px;
-	left: 100px;
+@ -webkit-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
 
-#finalAngle {
-	width: 140px;
-	left: 230px;
+@ -moz-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
 
-#timeSymbol {
-	color: #D0D1D3;
-	font-size: 30px;	
-	width: 50px;
-	right: 150px;
+@ -o-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
 
-#time {
-	width: 150px;
-	right: 10px;
-}
-
-#sidebar {
-	width: 275px;
-	height: 650px;
-	top: 50px;
-	left: 0%;
-}
-
-.sidebarContent {
-	width: 265px;
-	left: 10px;
-}
-
-.sidebarHeading {
-	color: #829595;
-	font-size: 13px;
-}
-
-.sidebarBody {
-	color: #4B4B4B;
-	font-size: 17px;
-}
-
-.sidebarCounter {
-	color: #4B4B4B;
-	font-size: 25px;
-}
-
-.sidebarBrowser {
-	border: solid #4B4B4B 3px;
-	background-color: white;
-	color: #4B4B4B;
-	border-radius: 4px;
-	width: 30px;
-	height: 30px;
-	top: 65px;
-}
-
-#virtualStation {
-	height: 65px;
-	top: 20px;
-}
-
-#virtualStationHeading {
-	top: 10px;
-}
-
-#virtualStationBody {
-	top: 30px;
-}
-
-#sequence {
-	height: 75px;
-	top: 90px;
-}
-
-#sequenceBody {
-	top: 20px;
-}
-
-#sequenceCounter {
-	top: 45px;
-}
-
-#batch {
-	height: 110px;
-	top: 170px;
-}
-
-#batchHeading {
-	top: 10px;
-}
-
-#batchCounter {
-	top: 30px;
-}
-
-#batchBrowser1 {
-	
-}
-
-#batchBrowser2 {
-	left: 45px;
-}
-
-#targetAngle {
-	height: 75px;
-	top: 280px;
-}
-
-#targetAngleHeading {
-	top: 10px;
-}
-
-#targetAngleBody {
-	top: 30px;
-}
-
-@
--webkit-keyframes up { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--moz-keyframes up { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--o-keyframes up { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
-keyframes up { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--webkit-keyframes down { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--moz-keyframes down { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--o-keyframes down { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
-keyframes down { 0%, 100% {
-	transform: rotate(0);
-}
-
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--webkit-keyframes r-to-l { 100% {
-	margin-left: -1px;
-}
-
-}
-@
--moz-keyframes r-to-l { 100% {
-	margin-left: -1px;
-}
-
-}
-@
--o-keyframes r-to-l { 100% {
-	margin-left: -1px;
-}
-
-}
-@
-keyframes r-to-l { 100% {
-	margin-left: -1px;
-}
-}
+@ keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
+}*/
