--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -2,7 +2,9 @@ div {
 	font-family: "Arial";
 	/*"Stencil Regular"; */
 	/* 	font-weight: bold; */
-	position: absolute;
+}
+positionEditArea {
+	overflow: auto;
 }
 
 .parameterEditArea {
@@ -21,7 +23,6 @@ div {
 	float: left;
 	background-color: #f6f6f6;
 	color: black;
-	margin: 10px 10px 10px 10px;
 	position: relative;
 	font-family: Arial;
 }
@@ -64,7 +65,7 @@ div {
 	margin: 10px 10px 0px 10px;
 	position: relative;
 	font-family: Arial;
-	font-size: 30px;
+	font-size: 15px;
 }
 
 .sectionbase {
@@ -75,6 +76,7 @@ div {
 	position: relative;
 	font-family: Arial;
 }
+
 
 .dot {
 	position: absolute;
@@ -186,6 +188,65 @@ div {
 	font-size: 16px;
 }
 
+
+.tabsectionheader {
+	color: white;
+	border-radius: 4px 4px 0px 0px;
+	background-color: #505E6B;
+	padding: 10px 0px 0px 15px;
+	margin: 10px 10px 0px 10px;
+}
+
+  .footerbackgroundarea {
+  margin: 0px 10px;
+  padding: 0px 0px 10px 0px; 
+  display: none; 
+  overflow: hidden;
+}
+
+/* Style the tab */
+div.tab {
+    overflow: hidden;
+    /* border: 1px solid #ccc; */
+    background-color:rgba(52, 63, 72, 0.0);
+}
+
+/* Style the buttons inside the tab */
+div.tab button {
+    
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+div.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+   display: none;
+ /*     border: 1px solid #ccc; */
+    border-top: none;
+    background-color: black;
+  color:white;
+}
+
+/* Style the tab content */
+.tabresourcecontent {
+    display: none;
+   /*  border: 1px solid #ccc; */
+    border-top: none; 
+}
 /*
 @ -webkit-keyframes up {
 	0%,
