--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -271,8 +271,9 @@ div.tab button.active {
 
 .simpleButton{
 	border: none;
-	border-radius: 10px; 
-	padding:5px; 
+	border-radius: 5px; 
+	padding:5px 10px 5px 10px; 
+	margin:1px 10px 1px 10px; 
 	background-color: #505E6B;
 	font-family: Arial;
 	color: white;
