--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -2,7 +2,6 @@ div {
 	font-family: "Arial";
 	/*"Stencil Regular"; */
 	/* 	font-weight: bold; */
-	
 }
 .inputcss {
 	background-color: black;
@@ -13,6 +12,16 @@ div {
 	background-color: black;
 	position: relative;
 }
+
+.trussBackgroundDiv  {
+	height:500px;
+	border: 1px solid yellow;
+	position:absolute;
+	left: 50px;
+	right: 50px;
+	top: 50px;
+	cursor: crosshair;
+	}
 
 .valuepair {
 	overflow: auto;
@@ -309,6 +318,55 @@ div.tab button.active {
 	font-family: Arial;
 	color: white;
     outline: none;
+}
+
+
+.trussButtonDiv {
+	display: inline;
+	margin:1px 10px 1px 1px;
+}
+
+.trussButton {
+	border: none;
+	background-color: #505E6B;
+	font-family: Arial;
+	color: white;
+	outline: none;
+	display:inline;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.trussButton:hover {
+	background-color: #bbb;
+}
+
+.trussButton:active {
+	background-color: white;
+}
+
+.nodeButton {
+	border-radius: 5px 5px 5px 5px;
+	padding:5px;
+	margin:1px 10px 1px 1px;
+}
+
+.tensorButtonLeft{
+	border-radius: 5px 0px 0px 5px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
+}
+
+.tensorButtonMiddle{
+	border-radius: 0px 0px 0px 0px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
+}
+
+.tensorButtonRight{
+	border-radius: 0px 5px 5px 0px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
 }
 
 /*
