--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -1,7 +1,89 @@
 div {
-	font-family: "Arial"; /*"Stencil Regular"; */
-/* 	font-weight: bold; */
-	position: absolute;
+	font-family: "Arial";
+	/*"Stencil Regular"; */
+	/* 	font-weight: bold; */
+}
+
+
+/* parameter background color */
+.parameterEditArea, .sectionbase  {
+	background-color:#f0fff0;
+	color:black;
+}
+
+.inputcss {
+	background-color: #ffdab9;
+	border: 1px solid grey;
+	border-radius: 2px;
+	}
+
+option {
+	padding:0px;
+}
+
+.parameterEditArea {
+	position: relative;
+	padding: 0px 0px 0px 0px;
+}
+
+/* button color */
+.ogbutton, .tabsectionbuttons, div.tab button, .trussButton, .simpleButton {
+	background-color: #cdaf95;
+	color: black;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.trussButton:hover, div.tab button:hover, .simpleButton:hover {
+	background-color: #eecbad;
+}
+
+.trussButton:active, div.tab button:active, .simpleButton:active, div.tab button.active {
+	background-color: #ffdab9;
+}
+
+.configareainner {
+	background-color: #8b7765;
+	border: 2px solid black;
+}
+
+.trussBackgroundDiv  {
+	border: 1px solid yellow;
+	position:absolute;
+	left: 50px;
+	right: 50px;
+	top: 50px;
+	bottom: 50px;
+	cursor: crosshair;
+	overflow:hidden;
+	}
+
+.valuepair {
+		overflow: auto;
+		position: relative;
+		font-family: Arial;
+		margin: 0px 0px;
+	}
+	
+.xyvaluepair {
+	display:inline-block;
+	width:70px;
+	margin-bottom: -4px;
+	}
+
+
+.lname {
+	float: left;
+	position: relative;
+	font-family: Arial;
+}
+
+.rvalue {
+	float: right;
+	position: relative;
+	font-family: Arial;
 }
 
 #loadingScreen {
@@ -15,7 +97,6 @@ div {
 #simulateActivities {
 	top: 50px;
 	left: 1050px;
-	
 	position: relative;
 }
 
@@ -28,114 +109,107 @@ div {
 	top: 150px;
 }
 
-  .sectionheader {
-	color: white;
+#debugLevel {
+	width:130px;
+}
+
+.sectionheader {
+	color: yellow;
 	border-radius: 4px 4px 0px 0px;
-	background-color: #505E6B;
 	padding: 10px 0px 10px 15px;
 	margin: 10px 10px 0px 10px;
 	position: relative;
 	font-family: Arial;
-	font-size: 30px;
+	font-size: 15px;
 }
 
-  .sectionbase {
-	border-radius: 0px 0px 4px 4px ;
-	background-color: #f6f6f6;
-	padding: 10px 10px 10px 15px;
+.tabsectionbuttons {
+	color: white;
+	opacity: 1;
+	border-radius: 4px 4px 0px 0px;
+	padding: 10px 0px 0px 15px;
+	margin: 10px 10px 0px 10px;
+}
+
+.footerbackgroundarea {
+	margin: 0px;
+	padding: 0px 0px 10px 0px;
+	display: none;
+	overflow: hidden;
+  }
+
+  .configareaouter {
+	position: absolute;
+	z-index:1000;
+	width:350px;
+	height:300px;
+}
+.configareainner {
+	opacity: 0.9;
+	border-radius: 14px;
+}
+
+
+.sectionbase {
+	border-radius: 0px 0px 4px 4px;
+	/* background-color: #99C68E; */
+	padding: 5px 10px 5px 15px;
 	margin: 0px 10px 10px 10px;
 	position: relative;
 	font-family: Arial;
 }
-  .sectionmiddle {
-	background-color: #f6f6f6;
-	position: relative;
+
+.sectionmiddle {
+	padding: 5px 0px;
+	border-bottom: grey solid 2px;
 }
 
-  .valuepair {
-	overflow:auto;
-	background-color: #f6f6f6;
-	position: relative;
-	font-family: Arial;
-  }
-  
-  .lname{
-	float:left; 
- 	background-color: #f6f6f6; 
-	margin:10px 10px 10px 10px;
-	position: relative;
-	font-family: Arial;
-  }
-  .rvalue{
-	float:right; 
- 	background-color: #f6f6f6; 
-	position: relative;
-	font-family: Arial;
-  }
-  
-.dot {
-	position: absolute;
-	left: 400px;
-	top: 350px;
-	width: 10px;
-	height: 10px;
-	margin-top: -5px;
-	margin-left: 30px;
-	border-radius: 50%;
-	background: #ccc;
-	z-index: -1;
-	box-shadow: 30px 0 0 #ccc, 60px 0 0 #ccc, 90px 0 0 #ccc, 120px 0 0 #ccc,
-		150px 0 0 #ccc;
-	-webkit-animation: r-to-l 0.4s infinite;
-	-moz-animation: r-to-l 0.4s infinite;
-	-o-animation: r-to-l 0.4s infinite;
-	animation: r-to-l 0.4s infinite;
+.sectionlast {
+	margin: 0px 10px 10px 10px;
 }
 
 .ogbutton {
 	border-radius: 10px;
 	border: 0px;
 	padding: 5px;
-	background-color: #505E6B;
 	font-family: Arial;
 	font-size: 30px;
 	color: white;
 	z-index: 999;
 }
 
-  .backgroundarea {
+
+.savebackground {
+	display: none;
+	z-index: 100;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: rgba(52, 63, 72, 0.9);
 }
 
-  .savebackground {
-    display:none;
-  	z-index: 100; 
-  	top: 0px; 
-  	left: 0px; 
-  	width: 100%; 
-  	height: 100%; 
-  	position: absolute;
-    background-color:rgba(52, 63, 72, 0.9);
+.container {
+	display: none;
+	z-index: 200;
+	position: absolute;
+	width: 400px;
+	top: 20%;
+	left: 50%;
 }
 
-   .container {
-    display:none;
-  	z-index: 200;
-    position: absolute;
-    width:400px;
-    top: 20%;
-    left: 50%;
-} 
- .containerelement{
- 	position:relative;
-    top: -50%;
-    left: -50%;
-} 
- 
+.containerelement {
+	position: relative;
+	top: -50%;
+	left: -50%;
+}
+
 #Guidecontainer {
 	border: solid black 1px;
 	width: 1000px;
 	height: 700px;
-} 
+}
 
 .center {
 	display: -webkit-box;
@@ -177,359 +251,231 @@ div {
 	right: 0%;
 }
 
-.engine {
-	width: 550px;
-	height: 443px;
-	top: 25px;
-	left: 25px;
-}
-
-/* #engine1 { */
-/* 	background-image: url("../Pictures/pretty_engine_resized.jpg"); */
-/* } */
-
-.ogbutton {
-	border-radius: 10px;
-	padding: 5px;
-	background-color: #505E6B;
-	font-family: Arial;
-	font-size: 30px;
-	color: white;
-}
-
 .textbox {
 	padding: 5px;
 	background-color: white;
 	color: black;
 	font-family: Arial;
-	font-size:16px;
+	font-size: 16px;
 }
 
-.circle {
-	border-radius: 50%;
-	border: solid grey 6px;
-	width: 23px;
-	height: 23px;
-}
-
-#circle1 {
-	bottom: 32px;
-	left: 128px;
-}
-
-.cross {
-	color: black;
-	font-weight: normal;
-	font-size: 72px;
-	width: 60px;
-	height: 60px;
-	z-index: 2;
-	display: none;
-}
-
-/* #engine2 { */
-/* 	background-image: url("../Pictures/2nd_pretty_engine.jpg"); */
-/* 	visibility: hidden; */
-/* } */
-
-#finalImage {
-	background-image: url("../Pictures/tumme_upp.jpg");
-	visibility: hidden;
-}
-
-.contentFooters {
-	background-color: #323F48;
-	color: #FCDF07;
-	font-size: 30px;
-	border: solid #323F48 7px;
-	border-radius: 4px;
-	height: 40px;
-	bottom: 10px;
-}
-
-#lock {
-	color: #D0D1D3;
-	width: 40px;
-	left: 10px;
-}
-
-#finalTorque {
-	width: 140px;
-	left: 70px;
-}
-
-#finalTorqueValue {
-	width: 100px;
-}
-
-#finalTorqueNm {
-	font-size: 15px;
-	width: 40px;
-	left: 100px;
-}
-
-#finalAngle {
-	width: 140px;
-	left: 230px;
-}
-
-#timeSymbol {
-	color: #D0D1D3;
-	font-size: 30px;	
-	width: 50px;
-	right: 150px;
-}
-
-#time {
-	width: 150px;
-	right: 10px;
-}
-
-#sidebar {
-	width: 275px;
-	height: 650px;
-	top: 50px;
-	left: 0%;
-}
-
-.sidebarContent {
-	width: 265px;
-	left: 10px;
-}
-
-.sidebarHeading {
-	color: #829595;
-	font-size: 13px;
-}
-
-.sidebarBody {
-	color: #4B4B4B;
-	font-size: 17px;
-}
-
-.sidebarCounter {
-	color: #4B4B4B;
-	font-size: 25px;
-}
-
-.sidebarBrowser {
-	border: solid #4B4B4B 3px;
+#fileList {
+	padding: 5px;
 	background-color: white;
-	color: #4B4B4B;
-	border-radius: 4px;
-	width: 30px;
-	height: 30px;
-	top: 65px;
+	color: black;
+	font-family: Arial;
+	font-size: 16px;
 }
 
-#virtualStation {
-	height: 65px;
-	top: 20px;
+.filename {
+	background-color: white;
+	color: black;
+	font-family: Arial;
+	font-size: 16px;
 }
 
-#virtualStationHeading {
-	top: 10px;
+.selectedfilename {
+	background-color: blue;
+	color: white;
+	font-family: Arial;
+	font-size: 16px;
 }
 
-#virtualStationBody {
-	top: 30px;
+
+  .footerbackgroundarea {
+  margin: 0px;
+  padding: 0px 0px 10px 0px;
+  display: none;
+  overflow: hidden;
 }
 
-#sequence {
-	height: 75px;
-	top: 90px;
+/* Style the tab */
+div.tab {
+    overflow: hidden;
+    /* border: 1px solid #ccc; */
 }
 
-#sequenceBody {
-	top: 20px;
+/* Style the buttons inside the tab */
+div.tab button {
+    padding: 14px 16px;
 }
 
-#sequenceCounter {
-	top: 45px;
+/* Change background color of buttons on hover
+div.tab button:hover {
+    background-color: #ddd;
 }
 
-#batch {
-	height: 110px;
-	top: 170px;
+/* Create an active/current tablink class
+div.tab button.active {
+    background-color: #ccc;
+}*/
+
+/* Style the tab content */
+.tabcontent {
+   display: none;
+ /*     border: 1px solid #ccc; */
+    border-top: none;
+  color:white;
 }
 
-#batchHeading {
-	top: 10px;
+/* Style the tab content */
+.tabresourcecontent {
+    display: none;
+   /*  border: 1px solid #ccc; */
+    border-top: none;
 }
 
-#batchCounter {
-	top: 30px;
+.simpleButton {
+	border: none;
+	border-radius: 5px;
+	padding:5px 5px 5px 5px;
+	margin:1px 5px 1px 5px;
+	font-family: Arial;
+    outline: none;
 }
 
-#batchBrowser1 {
-	
+.trussButtonDiv {
+	display: inline;
+	margin:1px 10px 1px 1px;
 }
 
-#batchBrowser2 {
-	left: 45px;
+.trussButton {
+	border: none;
+/* 	background-color: #505E6B;
+	color: white; */
+	color: black;
+	outline: none;
+	display:inline;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-#targetAngle {
-	height: 75px;
-	top: 280px;
+
+.nodeButton {
+	border-radius: 5px 5px 5px 5px;
+	padding:5px;
+	margin:1px 10px 1px 1px;
 }
 
-#targetAngleHeading {
-	top: 10px;
+.tensorButtonLeft{
+	border-radius: 5px 0px 0px 5px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
 }
 
-#targetAngleBody {
-	top: 30px;
+.tensorButtonMiddle{
+	border-radius: 0px 0px 0px 0px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
 }
 
-@
--webkit-keyframes up { 0%, 100% {
-	transform: rotate(0);
+.tensorButtonRight{
+	border-radius: 0px 5px 5px 0px;
+	padding:5px 5px 5px 5px;
+	margin:1px;
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--moz-keyframes up { 0%, 100% {
-	transform: rotate(0);
+/*
+@ -webkit-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--o-keyframes up { 0%, 100% {
-	transform: rotate(0);
+@ -moz-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
-keyframes up { 0%, 100% {
-	transform: rotate(0);
+@ -o-keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(-30deg);
-
-	  
-}
-}
-@
--webkit-keyframes down { 0%, 100% {
-	transform: rotate(0);
+@ keyframes up {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (-30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--moz-keyframes down { 0%, 100% {
-	transform: rotate(0);
+@ -webkit-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--o-keyframes down { 0%, 100% {
-	transform: rotate(0);
+@ -moz-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
-keyframes down { 0%, 100% {
-	transform: rotate(0);
+@ -o-keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-50%
-{
-transform
-:
- 
-rotate
-(30deg);
-
-	  
-}
-}
-@
--webkit-keyframes r-to-l { 100% {
-	margin-left: -1px;
+@ keyframes down {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate (30deg);
+	}
 }
 
-}
-@
--moz-keyframes r-to-l { 100% {
-	margin-left: -1px;
-}
-
-}
-@
--o-keyframes r-to-l { 100% {
-	margin-left: -1px;
+@ -webkit-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
 
+@ -moz-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
-@
-keyframes r-to-l { 100% {
-	margin-left: -1px;
+
+@ -o-keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
 }
-}
+
+@ keyframes r-to-l {
+	100% {
+		margin-left: -1px;
+	}
+}*/
