--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -4,21 +4,24 @@ div {
 	/* 	font-weight: bold; */
 }
 
-
 /* parameter background color */
-.parameterEditArea, .sectionbase  {
-	background-color:#f0fff0;
-	color:black;
+
+.parameterEditArea,
+.sectionbase {
+	background-color: #f0fff0;
+	color: black;
 }
 
-.inputcss, #fileList, .filename {
+.inputcss,
+#fileList,
+.filename {
 	background-color: #ffdab9;
 	border: 1px solid grey;
 	border-radius: 2px;
-	}
+}
 
 option {
-	padding:0px;
+	padding: 0px;
 }
 
 .parameterEditArea {
@@ -27,20 +30,32 @@ option {
 }
 
 /* button color */
-.ogbutton, .tabsectionbuttons, div.tab button, .trussButton, .simpleButton, .textbox {
+
+.ogbutton,
+.tabsectionbuttons,
+div.tab button,
+.trussButton,
+.simpleButton,
+.textbox {
 	background-color: #cdaf95;
 	color: black;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	transition: 0.3s;
 }
 
-.trussButton:hover, div.tab button:hover, .simpleButton:hover, .selectedfilename {
+.trussButton:hover,
+div.tab button:hover,
+.simpleButton:hover,
+.selectedfilename {
 	background-color: #eecbad;
 }
 
-.trussButton:active, div.tab button:active, .simpleButton:active, div.tab button.active {
+.trussButton:active,
+div.tab button:active,
+.simpleButton:active,
+div.tab button.active {
 	background-color: #ffdab9;
 }
 
@@ -49,61 +64,67 @@ option {
 	border: 2px solid black;
 }
 
-.trussBackgroundDiv  {
+.trussBackgroundDiv {
 	border: 1px solid yellow;
-	position:absolute;
+	position: absolute;
 	left: 50px;
 	right: 50px;
 	top: 50px;
 	bottom: 50px;
 	cursor: crosshair;
-	overflow:hidden;
-	}
+	overflow: hidden;
+}
 
-	.mainTruss  {
-		border: 1px solid yellow;
-		position:absolute;
-		left: 100px;
-		right: 100px;
-		top: 50px;
-		bottom: 50px;
-		cursor: crosshair;
-		overflow:hidden;
-		}
+.mainTruss {
+	border: 1px solid yellow;
+	position: absolute;
+	left: 100px;
+	right: 100px;
+	top: 50px;
+	bottom: 50px;
+	cursor: crosshair;
+}
 
-	.govenorTruss {
-			border: 1px solid green;
-			position:absolute;
-			right: 10px;
-			height : 80px;
-			width : 80px;
-			cursor: crosshair;
-			overflow:hidden;
-			}
+.govenorTruss {
+	position: absolute;
+	right: 10px;
+	height: 80px;
+	width: 80px;
+	cursor: crosshair;
+}
 
-	.stackTruss {
-				border: 1px solid red;
-				position:absolute;
-				left: 10px;
-				height : 80px;
-				width : 80px;
-				cursor: crosshair;
-				overflow:hidden;
-				}
+.govenorTrussFrame {
+	border: 1px solid green;
+	overflow: hidden;
+}
+
+.stackTrussFrame {
+	border: 1px solid red;
+	overflow: hidden;
+}
+
+.stackTruss {
+	position: absolute;
+	left: 10px;
+	height: 80px;
+	width: 80px;
+	cursor: crosshair;
+	background: "pink";
+	overflow: hidden;
+}
 
 .valuepair {
-		overflow: auto;
-		position: relative;
-		font-family: Arial;
-		margin: 0px 0px;
-	}
+	overflow: auto;
+	position: relative;
+	font-family: Arial;
+	margin: 0px 0px;
+}
 
 .xyvaluepair {
-	display:inline-block;
-	width:70px;
+	display: inline-block;
+	width: 70px;
 	margin-bottom: -4px;
-	}
-
+}
 
 .lname {
 	float: left;
@@ -141,7 +162,7 @@ option {
 }
 
 #debugLevel {
-	width:130px;
+	width: 130px;
 }
 
 .sectionheader {
@@ -167,20 +188,20 @@ option {
 	padding: 0px 0px 10px 0px;
 	display: none;
 	overflow: hidden;
-  }
-
-  .configareaouter {
-	position: absolute;
-	top:0px;
-	z-index:1000;
-	width:350px;
-	height:300px;
 }
+
+.configareaouter {
+	position: absolute;
+	top: 0px;
+	z-index: 1000;
+	width: 350px;
+	height: 300px;
+}
+
 .configareainner {
 	opacity: 0.9;
 	border-radius: 14px;
 }
-
 
 .sectionbase {
 	border-radius: 0px 0px 4px 4px;
@@ -209,7 +230,6 @@ option {
 	color: white;
 	z-index: 999;
 }
-
 
 .savebackground {
 	display: none;
@@ -299,34 +319,37 @@ option {
 	font-family: Arial;
 	font-size: 16px;
 	border: 0px;
-    cursor: pointer;
+	cursor: pointer;
 }
+
 .filenameInput {
 	text-align: right;
-	width:140px;
+	width: 140px;
 	margin: 5px 0px;
 }
+
 .selectedfilename {
-    cursor: pointer;
+	cursor: pointer;
 }
 
-
-  .footerbackgroundarea {
-  margin: 0px;
-  padding: 0px 0px 10px 0px;
-  display: none;
-  overflow: hidden;
+.footerbackgroundarea {
+	margin: 0px;
+	padding: 0px 0px 10px 0px;
+	display: none;
+	overflow: hidden;
 }
 
 /* Style the tab */
+
 div.tab {
-    overflow: hidden;
-    /* border: 1px solid #ccc; */
+	overflow: hidden;
+	/* border: 1px solid #ccc; */
 }
 
 /* Style the buttons inside the tab */
+
 div.tab button {
-    padding: 14px 16px;
+	padding: 14px 16px;
 }
 
 /* Change background color of buttons on hover
@@ -340,68 +363,69 @@ div.tab button.active {
 }*/
 
 /* Style the tab content */
+
 .tabcontent {
-   display: none;
- /*     border: 1px solid #ccc; */
-    border-top: none;
-  color:white;
+	display: none;
+	/*     border: 1px solid #ccc; */
+	border-top: none;
+	color: white;
 }
 
 /* Style the tab content */
+
 .tabresourcecontent {
-    display: none;
-   /*  border: 1px solid #ccc; */
-    border-top: none;
+	display: none;
+	/*  border: 1px solid #ccc; */
+	border-top: none;
 }
 
 .simpleButton {
 	border: none;
 	border-radius: 5px;
-	padding:5px 5px 5px 5px;
-	margin:1px 5px 1px 5px;
+	padding: 5px 5px 5px 5px;
+	margin: 1px 5px 1px 5px;
 	font-family: Arial;
-    outline: none;
+	outline: none;
 }
 
 .trussButtonDiv {
 	display: inline;
-	margin:1px 10px 1px 1px;
+	margin: 1px 10px 1px 1px;
 }
 
 .trussButton {
 	border: none;
-/* 	background-color: #505E6B;
+	/* 	background-color: #505E6B;
 	color: white; */
 	color: black;
 	outline: none;
-	display:inline;
-    cursor: pointer;
-    transition: 0.3s;
+	display: inline;
+	cursor: pointer;
+	transition: 0.3s;
 }
-
 
 .nodeButton {
 	border-radius: 5px 5px 5px 5px;
-	padding:5px;
-	margin:1px 10px 1px 1px;
+	padding: 5px;
+	margin: 1px 10px 1px 1px;
 }
 
-.tensorButtonLeft{
+.tensorButtonLeft {
 	border-radius: 5px 0px 0px 5px;
-	padding:5px 5px 5px 5px;
-	margin:1px;
+	padding: 5px 5px 5px 5px;
+	margin: 1px;
 }
 
-.tensorButtonMiddle{
+.tensorButtonMiddle {
 	border-radius: 0px 0px 0px 0px;
-	padding:5px 5px 5px 5px;
-	margin:1px;
+	padding: 5px 5px 5px 5px;
+	margin: 1px;
 }
 
-.tensorButtonRight{
+.tensorButtonRight {
 	border-radius: 0px 5px 5px 0px;
-	padding:5px 5px 5px 5px;
-	margin:1px;
+	padding: 5px 5px 5px 5px;
+	margin: 1px;
 }
 
 /*
