--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -460,6 +460,10 @@ div.tab button.active {
 	font-size: 10px;
 }
 
+.dynamicPropertyList {
+	float: right;
+}
+
 .smallLabel {
 	display: inline-block;
 	font-family: Arial;
@@ -472,7 +476,8 @@ div.tab button.active {
 	position: relative;
 	display: inline-block;
 	width: 56px;
-	height: 22px;
+	height: 18px;
+	margin: 1px 0px -3px 0px;
   }
 
   .switch input {display:none;}
